--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
  </head>
 <body>
+      <a href="/contact.html">contact</a>
     <h1>Repository</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum illum accusamus vero et. Aut, magni omnis nihil necessitatibus cum reiciendis vel impedit illum tempore, in quaerat dolores assumenda esse fugiat?</p>
     <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora ea minima accusamus velit consectetur sint porro ab fugiat, deleniti eos laborum consequatur maiores placeat nemo, eveniet nihil dolor obcaecati non.</P>
